overlap card fix

--- a/pages/lex/strat-names/main.module.sass
+++ b/pages/lex/strat-names/main.module.sass
@@ -5,6 +5,7 @@
   display: flex
   flex-direction: column
   gap: 1.3em
+  width: calc(100% - 2px)
 
   .strat-rank-group
     display: flex
